/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    java
    alias(libs.plugins.lombok)
    alias(libs.plugins.git.version)
    alias(libs.plugins.shadow)
}

repositories {
    //mavenLocal() // NEVER use in Production/Commits!
    mavenCentral()
    maven {
        url = uri("https://repo.papermc.io/repository/maven-public/")
    }

    maven {
        url = uri("https://maven.buildtheearth.net/releases")
    }

    maven {
        url = uri("https://hub.spigotmc.org/nexus/content/repositories/snapshots/")
    }

    maven {
        url = uri("https://mvn.alps-bte.com/repository/alps-bte/")
    }

    maven {
        url = uri("https://repo.onarandombox.com/content/groups/public/")
    }

    maven {
        url = uri("https://repo.codemc.io/repository/maven-snapshots/")
    }

    maven {
        url = uri("https://repo.codemc.io/repository/maven-public/")
    }

    maven {
        url = uri("https://jitpack.io")
    }

    maven {
        url = uri("https://repo.dmulloy2.net/repository/public/")
    }

    maven {
        url = uri("https://maven.daporkchop.net/")
    }

    maven {
        url = uri("https://download.java.net/maven/2")
    }

    maven {
        url = uri("https://maven.enginehub.org/repo/")
    }
}

dependencies {
    //implementation(libs.com.alpsbte.alpslib.alpslib.libpsterra) CURRENTLY BROKEN
    implementation(libs.alpslib.io)
    implementation(libs.alpslib.utils)   {
        exclude(group = "com.github.cryptomorin", module = "XSeries")
    }
    implementation(libs.com.alpsbte.canvas)
    implementation(libs.net.daporkchop.lib.binary)
    implementation(libs.com.github.cryptomorin.xseries)
    implementation(libs.net.wesjd.anvilgui)
    implementation(libs.micycle.clipper2)
    implementation(libs.org.json.json)
    implementation(libs.com.google.code.gson.gson)
    implementation(libs.com.google.guava.guava)
    implementation(libs.com.squareup.okhttp3.okhttp.jvm)
    implementation(libs.de.micromata.jak.javaapiforkml)
    implementation(libs.com.googlecode.json.simple)
    compileOnly(libs.io.papermc.paper.paper.api)
    compileOnly(libs.com.mojang.authlib)
    compileOnly(libs.com.fastasyncworldedit.fastasyncworldedit.core)
    compileOnly(libs.com.fastasyncworldedit.fastasyncworldedit.bukkit)
}

val versionDetails: groovy.lang.Closure<com.palantir.gradle.gitversion.VersionDetails> by extra
val details = versionDetails()

group = "net.buildtheearth"
version = "0.2.0" + "-" + details.commitDistance + "-" + details.gitHash + "-SNAPSHOT"
description = "BuildTeamTools"
java.sourceCompatibility = JavaVersion.VERSION_21
java.targetCompatibility = JavaVersion.VERSION_21

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
}

tasks.withType<Javadoc> {
    options.encoding = "UTF-8"
}

tasks.shadowJar {
    // Exclude annotation classes (e.g. org.jetbrains.annotations)
    exclude("org/jetbrains/annotations/**")
    // Exclude slf4j classes
    exclude("org/slf4j/**")
    exclude("META-INF/**")
    // Exclude duplicate com.sun.* classes
    exclude("com/sun/codemodel/**")
    exclude("com/sun/tools/xjc/**")
    exclude("com/sun/xml/xsom/**")
    archiveClassifier = ""

    val relocationPrefix = "net.buildtheearth.buildteamtools.shaded"
    relocate("com.alpsbte.alpslib", "$relocationPrefix.alpslib")
    relocate("org.mariadb.jdbc", "$relocationPrefix.jdbc")
    relocate("com.zaxxer.hikari", "$relocationPrefix.hikari")
    relocate("net.wesjd.anvilgui", "$relocationPrefix.anvilgui")
    relocate("com.cryptomorin.xseries", "$relocationPrefix.xseries")
    relocate("org.ipvp.canvas", "$relocationPrefix.canvas")
    relocate("net.daporkchop.lib.binary", "$relocationPrefix.binary")
    relocate("clipper2", "$relocationPrefix.clipper2")
    relocate("com.google.gson", "$relocationPrefix.gson")
    relocate("de.micromata.jak", "$relocationPrefix.jak")
    relocate("org.json", "$relocationPrefix.json")
    relocate("com.google.guava", "$relocationPrefix.guava")
    relocate("com.squareup.okhttp3", "$relocationPrefix.okhttp3")
}

tasks.assemble {
    dependsOn(tasks.shadowJar) // Ensure that the shadowJar task runs before the build task
}

tasks.jar {
    enabled = false // Disable the default jar task since we are using shadowJar
}

tasks.processResources {
    // work around IDEA-296490
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    with(copySpec {
        from("src/main/resources/plugin.yml") {
            expand(
                mapOf(
                    "version" to project.version,
                    "description" to project.description
                )
            )
        }
    })
}
